[incubator-kie-issues#2178]fix functionItem method